@@ -25,31 +25,33 @@ PLUGIN_SHARED = \
   LSP_PLUGINS_SHARED
 
 PLUGIN_DEPENDENCIES     = \
+  LSP_PLUGINS_ART_DELAY \
   LSP_PLUGINS_COMP_DELAY \
-  LSP_PLUGINS_PHASE_DETECTOR \
-  LSP_PLUGINS_SPECTRUM_ANALYZER \
-  LSP_PLUGINS_SAMPLER \
-  LSP_PLUGINS_TRIGGER \
-  LSP_PLUGINS_PARA_EQUALIZER \
-  LSP_PLUGINS_GRAPH_EQUALIZER \
   LSP_PLUGINS_COMPRESSOR \
+  LSP_PLUGINS_CROSSOVER \
   LSP_PLUGINS_DYNA_PROCESSOR \
   LSP_PLUGINS_EXPANDER \
   LSP_PLUGINS_GATE \
-  LSP_PLUGINS_LIMITER \
+  LSP_PLUGINS_GRAPH_EQUALIZER \
   LSP_PLUGINS_IMPULSE_RESPONSES \
   LSP_PLUGINS_IMPULSE_REVERB \
-  LSP_PLUGINS_SLAP_DELAY \
-  LSP_PLUGINS_OSCILLATOR \
   LSP_PLUGINS_LATENCY_METER \
+  LSP_PLUGINS_LIMITER \
+  LSP_PLUGINS_LOUD_COMP \
   LSP_PLUGINS_MB_COMPRESSOR \
-  LSP_PLUGINS_PROFILER \
-  LSP_PLUGINS_ROOM_BUILDER \
+  LSP_PLUGINS_MB_DYNA_PROCESSOR \
   LSP_PLUGINS_MB_EXPANDER \
   LSP_PLUGINS_MB_GATE \
-  LSP_PLUGINS_LOUD_COMP \
+  LSP_PLUGINS_OSCILLATOR \
+  LSP_PLUGINS_OSCILLOSCOPE \
+  LSP_PLUGINS_PARA_EQUALIZER \
+  LSP_PLUGINS_PHASE_DETECTOR \
+  LSP_PLUGINS_PROFILER \
+  LSP_PLUGINS_ROOM_BUILDER \
+  LSP_PLUGINS_SAMPLER \
+  LSP_PLUGINS_SLAP_DELAY \
+  LSP_PLUGINS_SPECTRUM_ANALYZER \
   LSP_PLUGINS_SURGE_FILTER \
-  LSP_PLUGINS_CROSSOVER \
-  LSP_PLUGINS_ART_DELAY \
-  LSP_PLUGINS_OSCILLOSCOPE
+  LSP_PLUGINS_TRIGGER
 
+  
